fixed bug where add button covered list items

--- a/src/components/list/List.scss
+++ b/src/components/list/List.scss
@@ -66,10 +66,7 @@ $grey: #adadad;
   .note-input {
     display: flex;
     justify-content: center;
-  }
-
-  .note {
-
+    position: relative;
   }
 
   /////// Checkmark
@@ -140,16 +137,18 @@ $grey: #adadad;
   .btn-container {
     display: flex;
     justify-content: center;
+    position: absolute;
   }
 
   .btn {
-    position: fixed;
-    bottom: 50px;
+    position: absolute;
+    top: 75px;
     height: 75px;
     width: 75px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 50px;
     background: $blue;
     border-radius: 75px;
     color: white;
